# matter-temp-1

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  app_main.cpp  idf_component.yml
main/drivers/: ASHT31.cpp  ASHT31.h  shtc3.cpp
